fix: fix layout bugs & fix random render

--- a/src/MainPage/mainPage.css
+++ b/src/MainPage/mainPage.css
@@ -80,12 +80,32 @@
 }
 
 .gif__container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 10px;
+
     max-width: 1100px;
+    margin: 0 auto;
+    padding: 5px;
+
+    img {
+        width: 100%;
+        height: 250px;
+        object-fit: cover;
+        border-radius: 3px;
+    }
+}
+
+.gif__single {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
     margin: 0 auto;
 
     img {
         height: 250px;
-
-        padding: 3px;
+        object-fit: cover;
+        border-radius: 8px;
     }
 }
